--- a/books.html
+++ b/books.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/fontawesome-free-5.15.4-web/css/all.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="../MaisonEdition/Resources/Picture/Logo.jpeg">
