--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
 			<div class="box_1">
 				 <h2>Latest Release</h2>
-				 <a href="books.html"><img src="./MaisonEdition/Resources/Picture/droit_image.jpg" alt="dime"></a>
+				 <a href="books.html"><img src="droit_image.jpg" alt="dime"></a>
 				 <a href="books.html"><img src="../MaisonEdition/Resources/Picture/Protection_Enfant.jpg" alt="dime"></a>
 				 <a href="books.html"><img src="../MaisonEdition/Resources/Picture/droit_image.jpg" alt="dime"></a>
 				 <a href="books.html"><img src="../MaisonEdition/Resources/Picture/Protection_Enfant.jpg" alt="dime"></a>
