--- a/books.html
+++ b/books.html
@@ -31,7 +31,7 @@
 	<div class="Books_Sum">
 		<div class="column">
 			<div class="card_content">
-				<img src="../MaisonEdition/Resources/Picture/Protection_Enfant.jpg" 
+				<img src="./Protection_Enfant.jpg" 
 				width='400' height='200' class='card_image' alt="Protection_Enfant"> <br>
 		        <p>
 				la protection juridique de l'enfant à travers la législation 
@@ -53,7 +53,7 @@
 
 	    <div class="column">
 		    <div class="card_content">
-				<img src="../MaisonEdition/Resources/Picture/droit_image.jpg"  
+				<img src="./droit_image.jpg"  
 				width='400' height='200' class='card_image' alt="droit_image"> <br>
 				<p>
 				le droit de l'image et droit à l'image des personnes sur les biens et droit
@@ -81,7 +81,7 @@
 
 	    <div class="column">
 		   <div class="card_content">
-				<img src="../MaisonEdition/Resources/Picture/Contrat.jpeg"  
+				<img src="./Contrat.jpeg"  
 				width='400' height='200' class='card_image' alt="contrat"> <br>
 				<p>
 				« Le droit civil congolais : le contrat de bail dans la loi n° 15/025 du 31 Decembre 2015 relative aux baux à loyer non professionnel »
@@ -106,7 +106,7 @@
 
 	    <div class="column">
 		    <div class="card_content">
-				<img src="../MaisonEdition/Resources/Picture/dime.jpg" 
+				<img src="./dime.jpg" 
 				width='400' height='200' class='card_image' alt="contrat"> <br>
 				<p>
 				La dîme et les fonctions des Lévites tirées du livre de Lévitiques 27 :30-32 d'une part et les fruits des enseignements, 
@@ -132,7 +132,7 @@
 
 	    <div class="column">
 		    <div class="card_content">
-				<img src="../MaisonEdition/Resources/Picture/police.jpg"  
+				<img src="./police.jpg"  
 				width='400' height='200'class='card_image' alt="police"> <br>
 			    <p>
 				L'indépendance de l'OPJ dans l'ordonnance 78-298  du 3 juillet 1978  relative à l'exercice des attributions… 
