--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body>	 
 	<header>   
 	  <figure class="logo">
-		<a href="index.html"><img src="../MaisonEdition/Resources/Picture/Logo.jpeg" alt="logo" width="301" height="72"></a> 
+		<a href="index.html"><img src="./Logo.jpeg" alt="logo" width="301" height="72"></a> 
 	  </figure>          
  	   <ul class="nav_link">
 		       <li><a href='books.html' target="_self">Books</a></li>
