--- a/books.html
+++ b/books.html
@@ -13,7 +13,7 @@
 <body>
     <header>   
 		<figure class="logo">
-			<a href="index.html"><img src="../MaisonEdition/Resources/Picture/Logo.jpeg" ></a>  
+			<a href="index.html"><img src="./Logo.jpeg" ></a>  
 		</figure>   
 		<a href="#" id="Responsive-logo"></a>       
 		  <ul class="nav_link">
