--- a/books.html
+++ b/books.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css"
 	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/fontawesome-free-5.15.4-web/css/all.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" type="image/jpg" href="../MaisonEdition/Resources/Picture/Logo.jpeg">
+        <link rel="shortcut icon" type="image/jpg" href="./Logo.jpeg">
 	<title>Books</title>
 </head>
 <body>
