--- a/aboutus.html
+++ b/aboutus.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About us </title>
-	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/styles.css">
-	<link rel="shortcut icon" type="image/jpg" href="../MaisonEdition/Resources/Picture/Logo.jpeg">
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="shortcut icon" type="image/jpg" href:"./Logo.jpeg">
 	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/fontawesome-free-5.15.4-web/css/all.css">
 </head>
 <body>
 	<header>   
 		<figure class="logo">
-			<a href="index.html"><img src="../MaisonEdition/Resources/Picture/Logo.jpeg" alt="logo" width="301" height="72"></a>  
+			<a href="index.html"><img src="./Logo.jpeg" alt="logo" width="301" height="72"></a>  
 		</figure>          
 		  <ul class="nav_link">
 				 <li><a href='index.html'>Book</a></li>
