--- a/aboutus.html
+++ b/aboutus.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>About us </title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>about us</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="shortcut icon" type="image/jpg" href:"./Logo.jpeg">
+	<link rel="shortcut icon" type="image/jpg" href="./Logo.jpeg">
 	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/fontawesome-free-5.15.4-web/css/all.css">
 </head>
 <body>
@@ -16,9 +16,9 @@
 		</figure>          
 		  <ul class="nav_link">
 				 <li><a href='index.html'>Book</a></li>
-				  <li><a href='Author.html' target='_self'>Author</a></li>
-				 <li><a href='Topic.html' target='_self'>Topics</a></li>
-				 <li><a href='AboutUs.html' target='_self'>About Us</a></li>
+				  <li><a href='author.html' target='_self'>Author</a></li>
+				 <li><a href='topic.html' target='_self'>Topics</a></li>
+				 <li><a href='aboutUs.html' target='_self'>About Us</a></li>
 		  </ul> 
 	  </header>
 
