--- a/author.html
+++ b/author.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Author</title>
-	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/stylesheet.css">
+	<title>author</title>
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/fontawesome-free-5.15.4-web/css/all.css">
-	<link rel="shortcut icon" type="image/jpg" href="../MaisonEdition/Resources/Picture/Logo.jpeg">
+	<link rel="shortcut icon" type="image/jpg" href="./Logo.jpeg">
 </head>
 <body>
 	<header>   
@@ -17,9 +16,9 @@
 		</figure>          
 		  <ul class="nav_link">
 				 <li><a href='books.html'>Books</a></li>
-				  <li><a href='Author.html' target='_self'>Author</a></li>
-				 <li><a href='Topic.html' target='_self'>Topics</a></li>
-				 <li><a href='AboutUs.html' target='_self'>About Us</a></li>
+				  <li><a href='author.html' target='_self'>Author</a></li>
+				 <li><a href='topic.html' target='_self'>Topics</a></li>
+				 <li><a href='aboutUs.html' target='_self'>About Us</a></li>
 		  </ul> 
 	</header>
     <h1 class="title_authors">Lists Authors apear here...</h1>
