--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
 				 <li><a href='index.html'>Book</a></li>
 				  <li><a href='author.html' target='_self'>Author</a></li>
 				 <li><a href='topic.html' target='_self'>Topics</a></li>
-				 <li><a href='aboutUs.html' target='_self'>About Us</a></li>
+				 <li><a href='aboutus.html' target='_self'>About Us</a></li>
 		  </ul> 
 	  </header>
 
