--- a/topic.html
+++ b/topic.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../MaisonEdition/Resources/Css/styles.css">
-    <link rel="shortcut icon" type="image/jpg" href="../MaisonEdition/Resources/Picture/Logo.jpeg">
-    <title>Authors</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="shortcut icon" type="image/jpg" href="./Logo.jpeg">
+    <title>topic</title>
 </head>
 <body>
     <header>   
 		<figure class="logo">
-			<a href="index.html"><img src="../MaisonEdition/Resources/Picture/Logo.jpeg" ></a>  
+			<a href="index.html"><img src="./Logo.jpeg" ></a>  
 		</figure>          
 		  <ul class="nav_link">
 				 <li><a href='books.html'>Books</a></li>
-				  <li><a href='Author.html' target='_self'>Author</a></li>
-				 <li><a href='Topic.html' target='_self'>Topics</a></li>
-				 <li><a href='AboutUs.html' target='_self'>About Us</a></li>
+				  <li><a href='author.html' target='_self'>Author</a></li>
+				 <li><a href='topic.html' target='_self'>Topics</a></li>
+				 <li><a href='aboutus.html' target='_self'>About Us</a></li>
 		  </ul> 
 	</header>
     <h1 class="title_authors">Topics appear here...</h1>
