--- a/author.html
+++ b/author.html
@@ -12,7 +12,7 @@
 <body>
 	<header>   
 		<figure class="logo">
-			<a href="index.html"><img src="../MaisonEdition/Resources/Picture/Logo.jpeg" ></a>  
+			<a href="index.html"><img src="./Logo.jpeg" ></a>  
 		</figure>          
 		  <ul class="nav_link">
 				 <li><a href='books.html'>Books</a></li>
