--- a/author.html
+++ b/author.html
@@ -18,7 +18,7 @@
 				 <li><a href='books.html'>Books</a></li>
 				  <li><a href='author.html' target='_self'>Author</a></li>
 				 <li><a href='topic.html' target='_self'>Topics</a></li>
-				 <li><a href='aboutUs.html' target='_self'>About Us</a></li>
+				 <li><a href='aboutus.html' target='_self'>About Us</a></li>
 		  </ul> 
 	</header>
     <h1 class="title_authors">Lists Authors apear here...</h1>
