--- a/author.html
+++ b/author.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/fontawesome-free-5.15.4-web/css/all.css">
-	<link rel="shortcut icon" type="image/jpg" href="./Logo.jpeg">
+	<link rel="shortcut icon" type="image/jpg" href="../MaisonEdition/Resources/Css/Logo.jpeg">
 </head>
 <body>
 	<header>   
