--- a/index.html
+++ b/index.html
@@ -2,69 +2,69 @@
 <html lang="en-fr">
  <head>
 	<meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Reflexionjuridique</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <title>Accueil | Reflexionjuridique</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="shortcut icon" type="image/jpg" href="../MaisonEdition/Resources/Picture/Logo.jpeg">
 	<link rel="stylesheet" href="../MaisonEdition/Resources/Css/fontawesome-free-5.15.4-web/css/all.css">
  </head>
  
  <body>	 
-	<header>   
+    <header>   
 	  <figure class="logo">
-		<a href="index.html"><img src="./Logo.jpeg" alt="logo" width="301" height="72"></a> 
-	  </figure>          
- 	   <ul class="nav_link">
-		       <li><a href='books.html' target="_self">Books</a></li>
- 		       <li><a href='Author.html' target='_self'>Author</a></li>
-			   <li><a href='Topic.html' target='_self'>Topics</a></li>
-			   <li><a href='AboutUs.html' target='_self'>About Us</a></li>
- 	   </ul> 
+		<img src="./LogoTransparent.png" alt="logo">
+	  </figure>      
+	  <ul class="nav_link">
+		<li><a class="active" href='index.html' target="_self">Accueil</a></li>
+		<li><a href='Catalogue.html' target="_self">Catalogue</a></li>
+		<li><a href='Service.html' target='_self'>Services</a></li>
+		<li><a href='Historique.html' target='_self'>Historique</a></li>
+		<li><a href='Contact.html' target='_self'>Contact</a></li>
+	  </ul>      
     </header>
-
-	<main>
-		<div id="banner">
-			<div class="intro">
-				<h1>Reflexion juridique</h1>
-			</div>
-		</div>
-
-        <div class="container">
-			<div class="box_1">
-				 <h2>Latest Release</h2>
-				 <a href="books.html"><img src="./droit_image.jpg" alt="dime"></a>
-				 <a href="books.html"><img src="./Protection_Enfant.jpg" alt="dime"></a>
-				 
-	        </div>	
-			<div class="box_2">
-				 <h2>Kids Book Feature</h2>
-				 <a href="books.html"><img src="./Protection_Enfant.jpg" alt="dime"></a>
-				 <a href="books.html"><img src="./droit_image.jpg" alt="dime"></a>
-
-	        </div>
-				<div class="box_3">
-					 <h2>Celebrate our coming soon titles early</h2>
-					 <a href="books.html"><img src="./Contrat.jpeg" alt="dime"></a>
-					 <a href="books.html"><img src="./droit_image.jpg" alt="dime"></a>
-
-			    </div>   
+	 <main>
+	  <section class="function">
+         <h1>RÉFLEXION JURIDIQUE</h1><br>
+		 <p>La jeune maison d’édition Réflexion Juridique n’étant qu’une association d’impression et de la diffusion des livres ou d’autres documents agit comme un intermédiaire entre un auteur et ses lecteurs. Pour cela, elle supervise les productions des ouvrages mis à sa disposition au préalable tout en s’assurant que les productions puissent répondre aux critères ci-après :Qualité de l’écriture,e l’intrigue, et Originalité.
+			Ce mot est utilisé ici dans le sens de lutter contre une conspiration sécrète ou déloyale visant à obtenir les avantages qui peuvent nuire à l’auteur.
+			Cependant la sélection n’est pas la seule fonction de notre jeune maison d’édition des livres Réflexion Juridique ; après le choix ou la sélection de texte de nos clients, elle signe un contrat d’édition avec l’auteur qui l’oblige à accompagner ce dernier  tout au long du processus de la création et de la diffusion du livre et cela en tenant compte de l’article 4 de la loi n° 74-003 du 2 Janvier 1974 relative au dépôt légal obligatoire des publications, le Décret du 2 juillet 2002 sur la nomenclature des actes générateurs des recettes sur la propriété intellectuelle et l’article 7 de l’Ordonnance n°89-010 du 18 Janvier 1989 portant la création de la Bibliothèque Nationale du Zaïre d’une part et d’autre part les arrêtes conjoints du 29 Juin 1977 fixant les modalités d’application et l’article 2 de l’arrêté n° 033/76 du 04 Octobre 1976 relatif au dépôt légal auprès de l’ambassade la plus proche de tous les documents ou livres que tout congolais rédige à l’étranger.   
+		 </p>
+	  </section>
+	  <section class="publication">
+		     <h2>nos dernière publication</h2>
+        <div class="books_title">
+				 <img src="./droit_image.jpg" alt="Droit"></a>
+				 <img src="./Protection_Enfant.jpg" alt="Enfant"></a>
+				 <img src="./Contrat.jpeg" alt="Contrat"></a>
+				 <img src="./dime.jpg" alt="Dime"></a>
+				 <img src="./police.jpg" alt="police"></a>
 		</div>	
+	  </section>
+	  <section class="actualite">
+		<h2>actualités quotidiennes</h2>
+		<div class="daily_news">
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A voluptatibus unde veniam iure, porro temporibus aliquam ipsum alias magni voluptatum. Autem minima nobis consectetur voluptatum assumenda quos deserunt nesciunt blanditiis.</p><br>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A voluptatibus unde veniam iure, porro temporibus aliquam ipsum alias magni voluptatum. Autem minima nobis consectetur voluptatum assumenda quos deserunt nesciunt blanditiis.</p><br>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A voluptatibus unde veniam iure, porro temporibus aliquam ipsum alias magni voluptatum. Autem minima nobis consectetur voluptatum assumenda quos deserunt nesciunt blanditiis.</p><br>
+			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A voluptatibus unde veniam iure, porro temporibus aliquam ipsum alias magni voluptatum. Autem minima nobis consectetur voluptatum assumenda quos deserunt nesciunt blanditiis.</p><br>
+	    </div>
+      </section>
   </main>
-  <footer>
+ <footer>
 	  <div class="main_content">
 		  <div class="Place">
 			  <h4>Place</h4>
             <i class="fas fa-map-marker-alt"></i>
-			 <span class="text">2 Tallis Street, London</span><br>
+			 <span class="text">123 Avenue Kabila, Lubumbashi</span><br>
 			 <i class="fas fa-phone-alt"></i>
-			<span class="text">+44(0)2037195833</span><br>
+			<span class="text">+243 9006146871 | + 243 892850171</span><br>
             <i class="fas fa-envelope"></i>
-			<span class="text">info@Reflexionjuridique.com</span>
+			<span class="text">reflexionjuridiquerdclushi@gmail.com</span>
 		  </div>
 		  
 		  <div class="social">
-			  <h4>Social Media</h4>
+			  <h4>réseaux sociaux</h4>
 			<ul>
 			    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
 				<li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -73,31 +73,10 @@
 				<li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
 			</ul>
 		  </div>
-		  <div class="detail">
-			<h4>Reflexion juridique</h4>
-			 <span>About us</span><br>
-			 <span>Authors</span><br>
-			 <span>Blog</span><br>
-			 <span>Contact</span>
-		</div>
-		<div class="comment">
-			<h4>Author Center</h4>
-			 <span>Submission Guidelines</span><br>
-			 <span>Submit Online</span><br>
-			 <span>#AskReflexionEditor</span><br>
-			 <span>Testimonials</span>
-		</div>
-		<div class="shipment">
-			<h4>Shop</h4>
-			 <span>Books</span><br>
-			 <span>Latest Release</span><br>
-			 <span>Best Sellers</span><br>
-			 <span>Shipping & Returns</span>
-		</div>
 	  </div>
 	  <div class="copyright">
 		<h6>&copy;2021 Ashwell publishing Ldt-Register in England No.6431579 |</h6>
-		<h6>Terms & Conditions | Privacy Policy | Cookies Policy</h6><br> 
+		<h6>Terms & Conditions | Privacy Policy | Cookies Policy</h6>
 	  </div>
   </footer>
 </body>
